<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.damdos.vivardaniel1eva">
    <item
        android:id="@+id/action_inicio"
        android:orderInCategory="100"
        android:icon="@drawable/inicio"
        app:showAsAction="always"
        android:title="@string/action_inicio"
        />
    <item android:id="@+id/action_calculadora"
        android:orderInCategory="300"
        app:showAsAction="never"
        android:title="@string/action_calculadora"></item>
<item android:id="@+id/action_calculadora2"
    android:orderInCategory="300"
    app:showAsAction="never"
    android:title="@string/action_calculadora">
    <menu>
        <item android:id="@+id/action_calculadora_micalculadora"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:title="@string/action_calculadora_micalculadora"></item>
        <item android:id="@+id/action_calculadora_calculadoraonline"
            android:orderInCategory="200"
            app:showAsAction="never"
            android:title="@string/action_calculadora_calculadoraonline"></item>
    </menu>

</item>


    <item
        android:id="@+id/action_cuestionario"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_cuestionario"/>


    <item
        android:id="@+id/action_cuestionario2"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/action_cuestionario">
        <menu>
            <item android:id="@+id/action_cuestionario_gmail"
                android:orderInCategory="100"
                app:showAsAction="never"
                android:title="@string/action_cuestionario_micuestionariogmail"></item>
            <item android:id="@+id/action_cuestionario_mail"
                android:orderInCategory="200"
                app:showAsAction="never"
                android:title="@string/action_cuestionario_cuestionariomail"></item>
        </menu>
    </item>
    <item
        android:id="@+id/action_calculadora_img"
        android:orderInCategory="300"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/action_calculadora_img"/>

    <item
        android:id="@+id/action_cuestionario_img"
        android:orderInCategory="200"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_edit_note_24"
        android:title="@string/action_cuestionario_img"/>

</menu>